fixed: form control text not legible if parent has white text
for example - an input in a selected text row
since the input sets the background colour, it should also set the foreground, which it now does

--- a/sass/forms.scss
+++ b/sass/forms.scss
@@ -30,6 +30,7 @@ input[type="checkbox"] {
   font-size: $font-size-default;
   line-height: $line-height-default;
   background-color: $chrome-color;
+  color: $gray-color;
   border: 1px solid $border-color;
   border-radius: $default-border-radius;
   outline: none;
